# solana_demo

./: README.md
Cross-Program-Invocation-Allocate-Fail/: Cargo.toml
Cross-Program-Invocation-Allocate-Fail/src/: processor.rs
Cross-Program-Invocation-Allocate-Fail/src/client/: allocate.ts  main.ts
Cross-Program-Invocation-Allocate/src/: processor.rs
Cross-Program-Invocation-Allocate/src/client/: allocate.ts  main.ts
Cross-Program-Invocation-Trasfer/: Cargo.toml
Cross-Program-Invocation-Trasfer/src/: processor.rs
Cross-Program-Invocation-Trasfer/src/client/: main.ts  transfer.ts
General-Multisig/: Cargo.toml
General-Multisig/src/: instruction.rs  lib.rs  processor.rs  state.rs
General-Multisig/src/client/: general.ts  main.ts
PrivilegeOwner/: Cargo.toml
PrivilegeOwner-Attack/: Cargo.toml
PrivilegeOwner-Attack/src/: processor.rs
PrivilegeOwner-Attack/src/client/: allocate.ts  main.ts
PrivilegeOwner-Multisig/: Cargo.toml
PrivilegeOwner-Multisig/src/: instruction.rs  processor.rs  state.rs
PrivilegeOwner/src/: instruction.rs  lib.rs  processor.rs  state.rs
Rectangle/Rectangle-Amount/: Cargo.toml
Rectangle/Rectangle-Area/: Cargo.toml
Rectangle/Rectangle-Area/src/: processor.rs
Rectangle/Rectangle-Area/src/client/: calculate.ts  main.ts
Rectangle/Rectangle-Perimeter/: Cargo.toml
Rectangle/Rectangle-Perimeter-2/: Cargo.toml
Rectangle/Rectangle-Perimeter-Fail/: Cargo.toml
Rectangle/Rectangle-Perimeter-Success/: Cargo.toml
TypeConfusion/: Cargo.toml
TypeConfusion/src/: instruction.rs  processor.rs  state.rs
(+18 files in other folders)
