[package]
name = "Rectangle_Area"
version = "1.0.0"
description = "Solana Program Library Transfer Lamports Example"
authors = ["BlockSec Team"]
repository = "https://github.com/blocksecteam/solana_demo"
license = "Apache-2.0"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "1.9.9"

[dev-dependencies]
solana-program-test = "1.9.9"
solana-sdk = "1.9.9"

[lib]
crate-type = ["cdylib", "lib"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
